logs/products.newspage.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/Products'...
Listing './lib/python3.5/site-packages/Products/NewsPage'...
Listing './lib/python3.5/site-packages/Products/NewsPage/content'...
Compiling './lib/python3.5/site-packages/Products/NewsPage/content/NewsPage.py'...
***   File "./lib/python3.5/site-packages/Products/NewsPage/content/NewsPage.py", line 137
    print 'not removing %s from news listing' % item
                                            ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/Products/NewsPage/i18n'...
Listing './lib/python3.5/site-packages/Products/NewsPage/profiles'...
Listing './lib/python3.5/site-packages/Products/NewsPage/profiles/default'...
Listing './lib/python3.5/site-packages/Products/NewsPage/profiles/default/types'...
Listing './lib/python3.5/site-packages/Products/NewsPage/skins'...
Listing './lib/python3.5/site-packages/Products/NewsPage/skins/newspage_images'...
Listing './lib/python3.5/site-packages/Products/NewsPage/skins/newspage_templates'...
Listing './lib/python3.5/site-packages/Products.NewsPage-1.0.6.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
